# DS25-Tetris_Battleroyale

./: README.md  pyproject.toml
Tetris_Battleroyale/: pyproject.toml
Tetris_Battleroyale/tetris_battleroyale/: Tetris.py  controller.py  game_view.py  main.py  model.py  server.py  server_state.json  start_backup.py  start_primary.py  start_server.py  vars.py  view.py
Tetris_Battleroyale/tetris_battleroyale/game/: controller.py  game_view.py  model.py  view.py
Tetris_Battleroyale/tetris_battleroyale/remote/: backup_server.py  client.py  game_manager.py  game_room.py  package.py  primary_server.py  server.py  server_state.py
Tetris_Battleroyale/tetris_battleroyale/remote/client/: __init__.py  client.py  client_game_manager.py
Tetris_Battleroyale/tetris_battleroyale/remote/server/: __init__.py  game_manager.py  lobby.py  main.py  server.py  server_game_manager.py
Tetris_Battleroyale/tetris_battleroyale/tests/: test_client_server_communication.py  test_game.py  test_game_search.py
Tetris_Battleroyale/tetris_battleroyale/utils/: package.py  vars.py
tests/: test_client_server_communication.py  test_game.py  test_game_search.py
tetris_battleroyale/: main.py  server_state.json  start_backup.py  start_primary.py  start_servers.py
tetris_battleroyale/game/: controller.py  game_view.py  model.py  view.py
tetris_battleroyale/remote/: backup_server.py  client.py  game_room.py  primary_server.py  server.py  server_state.py
